# red-green-crimbo

./: Cargo.toml  LICENSE  README.md  main.js  memory.x
.cargo/: config
src/: cos.rs  main.rs  patterns.rs  sin.rs
