[package]
name = "red-green-crimbo"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
publish = false

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-rtfm = "0.3.2"
cortex-m-rtfm-macros = "0.3.1"
embedded-hal = "0.1.2"
ssd1306 = "0.1.0"
panic-abort = "0.1.1"
embedded-graphics = "0.1.1"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
rev = "330c904473dc3a34ef2864166dcbe658992d652a"
features = ["rt"]
version = "*"
# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
opt-level = "s"
